--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,11 @@ body{
   
 }
 
+h1{
+  font-size: 4em;
+  padding-left: 5px;
+}
+
 img{
   height: 150px;
   width: 150px;  
@@ -36,7 +41,7 @@ h2.negrita{
   padding: 5px;
 }
 
-nav a.sinSubrayado{
+nav a.seleccionado{
   text-decoration: none;
 }
 
