--- a/style/style2.css
+++ b/style/style2.css
@@ -3,3 +3,66 @@
 *{ 
   box-sizing: border-box
 }
+
+body{
+  font-family: 'Comic Neue', cursive;
+  max-width: 80vw;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.encabezado{
+  background-image: url('../img/design1_image2.jpg');
+  height: 250px;
+  background-size: 100%;
+  background-position: 0 80%;  
+}
+
+h1{
+  font-size: 4em;
+  font-style: italic;  
+}
+
+img{
+  height: 150px;
+  width: 150px;  
+}
+
+p{
+  text-indent: 15px;
+}
+
+h2.negrita{
+  font-weight: bold;   
+  text-align: center;
+  margin: 0 auto;
+  padding: 5px;
+  border: solid 1px black;
+  
+}
+
+nav a{
+  text-decoration: none;
+  color: white;
+  background-color:rgb(88, 165, 221);
+  border: solid 1px black;
+  padding: 5px;
+}
+
+nav a.seleccionado{
+  background-color: rgb(87, 189, 87);
+}
+
+ul{
+  list-style:none;
+}
+
+ul li:nth-child(odd){
+  font-weight: bold;
+  font-style: italic;
+}
+
+ul li:nth-child(even){
+  padding-left: 10px;
+  padding-bottom: 15px;
+}
