--- a/style/style2.css
+++ b/style/style2.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Montserrat&family=Open+Sans:wght@700&family=Raleway:wght@400;700&display=swap');
 
-*{ 
+*{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box
 }
 
@@ -15,15 +17,25 @@ body{
   background-image: url('../img/design1_image2.jpg');
   height: 250px;
   background-size: 100%;
-  background-position: 0 80%;  
+  background-position: 0 80%;
+
 }
 
 h1{
   font-size: 4em;
-  font-style: italic;  
+  font-style: italic;
+  margin-bottom: 5px;  
+}
+
+figure{
+  display: inline-block;
+  height: 160px;
+  width: 160px; 
+
 }
 
 img{
+  display: inline-block;
   height: 150px;
   width: 150px;  
 }
@@ -51,6 +63,14 @@ nav a{
 
 nav a.seleccionado{
   background-color: rgb(87, 189, 87);
+}
+
+
+#divUl{  
+  display: inline-block;
+  width: 75%;
+  height: 150px;
+  border: 1px solid blue;
 }
 
 ul{
