--- a/style/style3.css
+++ b/style/style3.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Montserrat&family=Open+Sans:wght@700&family=Raleway:wght@400;700&display=swap');
 
 *{ 
+  margin: 0;
+  padding: 0;
   box-sizing: border-box
 }
