--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,10 @@ body{
 
 /* header */
 
+#miniLogo{
+  display: none;
+}
+
 .encabezado{
   background-image: url('../img/design1_image1.jpg');
   height: 250px;
@@ -39,8 +43,7 @@ body{
 #subtitulo>img{
   position: absolute;  
   top: -50px;
-  left: 900px;
-  background-color: white;  
+  right: 150px;  
 }
 
 img{
