--- a/style/style.css
+++ b/style/style.css
@@ -1,26 +1,135 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Montserrat&family=Open+Sans:wght@700&family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Kanit&family=Montserrat&family=Open+Sans:wght@700&family=Raleway:wght@400;700&display=swap');
 
 *{ 
-  box-sizing: border-box
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body{
-  font-family: 'Comic Neue', cursive;
-  max-width: 80vw;
-  margin: 0 auto;
-  padding: 15px;
+  font-family: 'Kanit', sans-serif;
+  max-width: 100vw;
+  margin: 0;     
 }
 
-img{
+/* header */
+
+header{  
+  width: 100%;  
+  height: 40vh;   
+  display: flex;  
+  flex-direction: column; 
+  align-items: center;
+}
+
+#titulo, #subtitulo, h6{
+  background-color: black;
+  color: white;
+  width: 100%;
+  text-align: center;
+  align-content: center;
+
+}
+
+#titulo{
+  font-size: 2em;
+  max-height: 30%;
+}
+
+.img-encabezado{
+  background-image: url('../img/design1_image5.jpg');
+  height: 100%;
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: 0 80%; 
+  width: 100%; 
+}
+
+nav{  
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  margin-right: 20px;
+}
+
+nav a{
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  background-color:rgb(88, 165, 221);  
+  padding: 3px;
+  width: 90px;  
+  text-align: center;
+  margin-right: 15px;  
+  border-radius: 60px;
+  box-shadow: 2px 5px 5px rgb(0, 0, 0); 
+}
+
+nav a.seleccionado{
+  background-color: rgb(87, 189, 87);
+}
+
+nav a:hover{
+  background-color: rgb(58, 121, 166);
+}
+
+#subtitulo{
+  font-size: 1em;
+  max-height: 10%;
+  box-shadow: 2px 5px 5px rgb(92, 92, 92); 
+  
+}
+
+/* main */
+
+main{
+  border: 2px solid red;
+  height: 55vh;
+  display: flex;  
+  justify-content: space-between;
+}
+
+img{  
   height: 150px;
-  width: 150px;  
+  width: 150px; 
+  margin: 20px 20px 0;     
 }
 
-.negrita{
-  font-weight: bold;
+#informacion{
+  width: 75%;
+  margin-top: 20px;
+  margin-right: 20px;
+  border: 2px solid red;
 }
 
 ul{
   list-style:none;
+  font-size: 1.3em;
 }
 
+ul li:nth-child(odd){
+  font-weight: bold;
+  font-style: italic;
+}
+
+ul li:nth-child(even){
+  padding: 0 0 15px 10px;
+}
+
+/* footer */
+
+footer{  
+  width: 100%;  
+  height: 5vh;   
+  border: 2px solid green;  
+  display: flex; 
+  
+}
+
+h6{
+  height: 100%;
+  padding-top: 7px;
+  
+}
