--- a/style/style.css
+++ b/style/style.css
@@ -16,19 +16,18 @@ body{
 
 header{  
   width: 100%;  
-  height: 40vh;   
+  height: 45vh;   
   display: flex;  
   flex-direction: column; 
   align-items: center;
+  justify-content: center;
 }
 
 #titulo, #subtitulo, h6{
   background-color: black;
   color: white;
-  width: 100%;
+  width: 100%;  
   text-align: center;
-  align-content: center;
-
 }
 
 #titulo{
@@ -41,7 +40,7 @@ header{
   height: 100%;
   background-size:cover;
   background-repeat: no-repeat;
-  background-position: 0 80%; 
+  background-position: 0 85%; 
   width: 100%; 
 }
 
@@ -55,14 +54,13 @@ nav{
 }
 
 nav a{
-  text-decoration: none;
-  display: inline-block;
+  text-decoration: none; 
+  font-size: 0.8em; 
   color: white;
-  background-color:rgb(88, 165, 221);  
-  padding: 3px;
-  width: 90px;  
-  text-align: center;
-  margin-right: 15px;  
+  background-color:rgb(81, 153, 205);  
+  padding: 2px;
+  width: 80px;  
+  text-align: center;    
   border-radius: 60px;
   box-shadow: 2px 5px 5px rgb(0, 0, 0); 
 }
@@ -84,22 +82,22 @@ nav a:hover{
 /* main */
 
 main{
-  border: 2px solid red;  
+  border: 2px solid rgb(0, 8, 255);   
   display: flex;  
-  justify-content: space-between;
+  justify-content: space-between;  
   flex-grow: 1; /* no me funciona */
 }
 
-img{  
+img#logo{  
   height: 150px;
   width: 150px; 
-  margin: 20px 20px 0;     
+  margin: 20px 20px 0; 
+  border: 2px solid red;        
 }
 
 #informacion{
   width: 75%;
-  margin-top: 20px;
-  margin-right: 20px;
+  margin: 20px 20px 40px 0;  
   border: 2px solid red;
   display: flex;
   flex-direction: column;
@@ -127,15 +125,20 @@ p, .sangria{
   text-align: center;
 }
 
-ul.lista-rules1 li{
+ul.sin-deco li{
   list-style:none;
 }
 
 .corrido1{
   margin-left: 15px;
 }
+
 .corrido2{
-  margin-left: 25px;
+  margin-left: 20px;  
+}
+
+ul.tipo-circulo li{
+  list-style: circle;
 }
 
 .separacion{
