--- a/style/style.css
+++ b/style/style.css
@@ -81,24 +81,25 @@ nav a:hover{
 
 /* main */
 
-main{
-  border: 2px solid rgb(0, 8, 255);   
-  display: flex;  
+main{     
+  display: flex;    
+}
+
+#contenedor-main{  
+  display: flex;
   justify-content: space-between;  
-  flex-grow: 1; /* no me funciona */
+  flex-grow: 1; 
 }
 
 img#logo{  
   height: 150px;
   width: 150px; 
-  margin: 20px 20px 0; 
-  border: 2px solid red;        
+  margin: 20px 20px 0;          
 }
 
 #informacion{
   width: 75%;
-  margin: 20px 20px 40px 0;  
-  border: 2px solid red;
+  margin: 20px 20px 40px 0;   
   display: flex;
   flex-direction: column;
 }
@@ -117,7 +118,7 @@ ul#listas-index li:nth-child(even){
   padding: 0 0 15px 10px;
 }
 
-/* p,  */.sangria{
+.sangria{
   text-indent: 15px;
 }
 
@@ -139,6 +140,7 @@ ul.sin-deco li{
 
 ul.tipo-circulo li{
   list-style: circle;
+  margin-left: 40px;
 }
 
 .separacion{
@@ -166,8 +168,7 @@ td{
 
 footer{  
   width: 100%;  
-  height: 5vh;   
-  border: 2px solid green;
+  height: 5vh;     
   position: fixed;
   bottom: 0; 
 }
