agrego cambios en registration.html, en la hoja de estilos y en los nombres de algunas clases

--- a/style/style.css
+++ b/style/style.css
@@ -69,7 +69,7 @@ nav a.seleccionado{
   background-color: rgb(87, 189, 87);
 }
 
-nav a:hover{
+nav a:hover, #botonSubmit:hover{
   background-color: rgb(58, 121, 166);
 }
 
@@ -130,11 +130,11 @@ ul.sin-deco li{
   list-style:none;
 }
 
-.corrido1{
+.margen1{
   margin-left: 15px;
 }
 
-.corrido2{
+.margen2{
   margin-left: 20px;  
 }
 
@@ -143,7 +143,7 @@ ul.tipo-circulo li{
   margin-left: 40px;
 }
 
-.separacion{
+.espacio-inf{
   margin-bottom: 15px;
 }
 
@@ -164,6 +164,64 @@ td{
   text-align: center;
 }
 
+fieldset{
+  border: 0px;
+}
+
+.linea-input{
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  width: 35%;  
+}
+
+.distancia{  
+  margin-right: 80px;
+}
+
+.div1{
+  display: flex;
+  gap: 3px;   
+}
+
+.div2{
+  display: flex;  
+  flex-direction: column;    
+  margin-right: 70px;
+}
+
+.div3{
+  width: 100%;
+  display: flex;
+  flex-direction: column;    
+}
+
+.div4{
+  display: flex;    
+  flex: auto;  
+}
+
+.div1>p, .div1 label{
+  padding-right: 8px;
+}
+
+.margen{
+  padding-left: 20px;
+}
+
+#botonSubmit{
+  background-color: rgb(87, 189, 87);
+  font-size: 0.8em; 
+  color: white;    
+  padding: 2px;
+  width: 80px;
+  height: 25px;  
+  text-align: center;    
+  border-radius: 60px;
+  border: 0px;
+  box-shadow: 2px 5px 5px rgb(92, 92, 92);
+}
+
 /* footer */
 
 footer{  
@@ -177,3 +235,19 @@ h6{
   height: 100%;
   padding-top: 7px;  
 }
+
+/* feedback list */
+
+/* #feedback-list{
+  border: 1px solid red;
+  display: flex;  
+  justify-content: center;
+  align-self: center;
+  width: 50%;
+}
+
+.th-tabla{
+  border: 2px solid rgb(101, 255, 144);
+  width: 50%;
+} */
+
