--- a/style/style.css
+++ b/style/style.css
@@ -175,6 +175,8 @@ fieldset{
   width: 100%;
 }
 
+
+
 .linea-input{
   border-top: 0;
   border-left: 0;
@@ -187,22 +189,22 @@ fieldset{
   margin-right: 80px;
 }
 
-.div1{
+.div-organizador1{  
+  display: flex;
+}
+
+.div-organizador2{
   display: flex;
   gap: 3px;    
 }
 
-.div2{
+.div-organizador3{
   display: flex;  
   flex-direction: column;    
   margin-right: 70px;  
 }
 
-.div3{  
-  display: flex;
-}
-
-.div1>p, .div1 label{
+.div-organizador2>p, .div-organizador2 label{
   padding-right: 8px;
 }
 
@@ -249,5 +251,4 @@ h6{
   height: 100%;
   padding-top: 7px;  
 }
-
 
